# mrhcore

./: .gitignore  AUTHORS.txt  CMakeLists.txt  README.md  README.txt  TODO.txt  VERSION.txt
doc/source/: conf.py  index.rst
doc/source/A_Service_Handling/: A_Service_Handling.rst  A_Service_Pool.rst  A_Service_Starting.drawio  A_Service_Starting.rst  A_Service_Stopping.rst  Event_Exchange.rst  Event_Exchange_P.drawio  Event_Exchange_S.drawio  Permissions.rst
doc/source/A_Service_Handling/Event_Exchange/: Version_1.rst
doc/source/Application_Handling/: Application_Handling.rst  Application_Starting.drawio  Application_Starting.rst  Application_Stopping.rst  Application_Types.rst  Event_Exchange.rst  Permissions.rst
doc/source/Application_Handling/Event_Exchange/: Version_1.rst
doc/source/Building/: Building.rst
doc/source/Configurations/: Configurations.rst  Core_Configuration.rst  Locale.rst  Package_List.rst  Platform_Service_List.rst  Protected_Event_List.rst  User_Event_Route.rst  User_Service_List.rst
doc/source/P_Service_Handling/: Event_Exchange.rst  Event_Exchange_P.drawio  Event_Exchange_S.drawio  P_Service_Handling.rst  P_Service_Pool.rst  P_Service_Starting.drawio  P_Service_Starting.rst  P_Service_Stopping.rst  P_Service_Types.rst
src/: FilePaths.h  Main.cpp  Revision.h  Timer.cpp  Timer.h
src/Configuration/: ConfigurationException.h  ConfigurationFiles.h  CoreConfiguration.cpp  CoreConfiguration.h  Locale.cpp  Locale.h  PackageList.cpp  PackageList.h  PlatformServiceList.cpp  PlatformServiceList.h  ProtectedEventList.cpp  ProtectedEventList.h  UserEventRoute.cpp  UserEventRoute.h  UserServiceList.cpp  UserServiceList.h
src/Event/: Event.cpp  Event.h  EventException.h  EventQueue.cpp  EventQueue.h
src/Event/Source/: SourceMRHCKM.cpp  SourceMRHCKM.h  SourcePipe.cpp  SourcePipe.h  TransmissionSource.cpp  TransmissionSource.h
src/InputHandler/: InputException.h  InputHandler.cpp  InputHandler.h  InputString.cpp  InputString.h
src/InputHandler/Component/: InputLaunch.cpp  InputLaunch.h  InputPassword.cpp  InputPassword.h  InputStop.cpp  InputStop.h
src/Logger/: EventLogger.cpp  EventLogger.h  Logger.cpp  Logger.h
src/Package/: Package.cpp  Package.h  PackageContainer.cpp  PackageContainer.h  PackageException.h  PackagePaths.h
src/Package/Content/: PackageApp.cpp  PackageApp.h  PackageConfiguration.cpp  PackageConfiguration.h  PackageService.cpp  PackageService.h
src/Process/: Process.cpp  Process.h  ProcessException.h  ServiceProcess.cpp  ServiceProcess.h
src/Process/Platform/: PlatformServiceProcess.cpp  PlatformServiceProcess.h
src/Process/ServicePool/: PoolCondition.cpp  PoolCondition.h  PoolEvents.cpp  PoolEvents.h  PoolService.cpp  PoolService.h  ServicePool.cpp  ServicePool.h
src/Process/ServicePool/Platform/: PlatformService.cpp  PlatformService.h  PlatformServicePool.cpp  PlatformServicePool.h
src/Process/ServicePool/User/: UserService.cpp  UserService.h  UserServicePool.cpp  UserServicePool.h
src/Process/User/: UserPermission.cpp  UserPermission.h  UserProcess.cpp  UserProcess.h  UserServiceProcess.cpp  UserServiceProcess.h
